tests/toylang/neg/001113_mutation.toylang
program a = { if a var a : bool then sleep; } .
